# skills-managers

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.en.md  README.md  README.zh-CN.md  apply_compression.py  apply_conventional_commits.py  compress_commits.py  compress_commits_detailed.py  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vite.preview.config.ts
.github/workflows/: build.yml  deploy-pages.yml
app/src/: App.tsx  ErrorBoundary.tsx  RootLayout.tsx  global.d.ts  main.tsx
docs/: BUGFIX-VERIFICATION.md  CASCADE-CONTROL-GUIDE.md  CENTRAL-STORAGE-GUIDE.md  MANUAL-TEST-CHECKLIST.md  MULTI-SOURCE-SCANNING-GUIDE.md  PHASE2-COMPLETION-SUMMARY.md  VERIFICATION-GUIDE.md  centralized-skill-management-design.md  index.html  index.template.html  phase1-backend-api.md  phase1-progress.md  phase1-summary.md  phase2-integration-test-report.md  user-guide-en.md  user-guide.md
docs/en/: index.html
scripts/: release.mjs  sync-version.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  github.rs  github_scanner.rs  installer.rs  linker.rs  linker_test.rs  main.rs  models.rs  models_test.rs  scanner.rs  scanner_test.rs  settings.rs  settings_test.rs  state.rs  tray.rs
src-tauri/src/commands/: github.rs  marketplace.rs  mod.rs  settings.rs  skills.rs  theme.rs  window.rs
src-tauri/src/github/: git_remote.rs  marketplace.rs  mod.rs
src-tauri/src/tests/: mod.rs  models.rs  scanner.rs  settings.rs
(+154 files in other folders)
